--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-pdf": "^10.2.0",
+    "reductoai": "^0.13.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
